# vcpkg-boost-example

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-and-test.yml  cache-dependencies.yml
src/: CMakeLists.txt  test.cpp
test/: CMakeLists.txt  boost-test.cmake  first_test.cpp
tools/: build-package.sh  package.nuspec  repair-package.cmd
